# anima-prompt-helper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  LICENSE  MANIFEST.in  MODULE_TREE.md  README.md  TROUBLESHOOTING.md  USAGE.md  __init__.py  api_contract.md  node_list.json  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
data/: anima_spec.json  animadex_character_presets.json  artist_pool_default.json  character_pool_default.json  character_presets.json  situation_pool_default.json  situation_presets.json  tag_palette.json  tag_palette_extras.json  user_situation_pools.json
docs/: ARCHITECTURE.md  PRE_COMMIT.md  SCREENSHOTS.md
i18n/: ja.json
python/: __init__.py  artist_pool.py  character_pool.py  composer.py  metadata_extractor.py  nodes.py  situation_pool.py  validators.py
scripts/: CHECKS.md  README_BENCH.md  benchmark_composer.py  benchmark_palette_load.py  benchmark_validate_route.py  build_dist.ps1  build_dist.sh  check_data_integrity.py  fetch_animadex_character_details.py  fetch_artist_pool.py  fetch_character_pool.py  fetch_situation_pool.py  install_templates.bat  install_templates.ps1  install_templates.sh  parity_cases.json  run_all_checks.bat  run_all_checks.ps1  run_all_checks.sh  run_js_compose.mjs  test_precommit_config.py  zip_release.ps1  zip_release.sh
templates/: OOO_Anima_highquality.json  OOO_Anima_simple.json  OOO_Anima_standard.json
tests/: __init__.py  test_api_animadex_character_presets.py  test_api_artist_pools.py  test_api_character_pools.py  test_api_health.py  test_api_situation_pools.py  test_artist_randomizer.py  test_character_randomizer.py  test_composer.py  test_composer_negative.py  (+12 more)
(+31 files in other folders)
